--- a/layout/css/tinyvoices-home.css
+++ b/layout/css/tinyvoices-home.css
@@ -110,3 +110,18 @@ font-size:28px;
 margin-bottom:20px;    
 }
 
+
+.jumbotron-categories{
+margin-top:-20px;
+font-weight:200;
+background-color:#06A89D;
+color:#fff;
+padding-top:60px;
+padding-bottom:60px;
+padding-left:15px;
+padding-right:15px;
+margin-top:50px;
+margin-bottom:50px;
+}
+
+
